# billiards

./: CMakeLists.txt  ball.cpp  ball.h  billiards.in  geometry.cpp  geometry.h  main.cpp  main.h  main_nogui.cpp  tempos_seq  visualizador.cpp  visualizador.h  visualizador_nogui.cpp  visualizador_nogui.h
in/: input_100.in  input_1000.in  input_10000.in  input_200.in  input_2000.in  input_20000.in  input_30000.in  input_4000.in  input_500.in  input_50000.in  input_6000.in  input_8000.in  random_input.py
